kubernetes/gateway/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service-virtual-service
  namespace: abdul-dicoding
spec:
  hosts:
  - "*"
  gateways:
  - order-service-gateway
  http:
  - match:
    - uri:
        exact: "/order"
    route:
      - destination:
          host: order-service
          port:
            number: 3000
